--- a/templates.html
+++ b/templates.html
@@ -16,7 +16,23 @@
     <link type="text/css" rel="stylesheet" href="css/color.css">
     <!--=============== favicons ===============-->
     <link rel="shortcut icon" href="images/favicon.ico">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124432890-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-124432890-1');
+    </script>
+
 </head>
+
+
 
 <body>
     <!--loader-->
@@ -71,7 +87,8 @@
                         </li>
 
                         <li><a href="pricing.html">Services</a></li>
-                        <li><a href="contacts.html">Contact Us</a></li>
+                        <li><a href="mailto:hello@kali.technology?Subject=Hello%20again">Contact Us</a></li>
+
                         <!-- <li><a href="ourteam.html">Our Team</a></li> -->
 
                     </ul>
@@ -223,7 +240,7 @@
                         </div>
                         <!-- gallery-item end-->
                         <!-- gallery-item-->
-                        <div class="gallery-item uides ">
+                        <div class="gallery-item entrepreneur photography ">
                             <div class="grid-item-holder">
                                 <a href="images/pop.jpg" class="fet_pr-carousel-box-media-zoom   image-popup"><i class="fal fa-search"></i></a>
                                 <img src="images/pop.jpg" alt="">
@@ -421,7 +438,7 @@
                             <div class="col-md-8">
                                 <h3>Ready To order Your Website?</h3>
                             </div>
-                            <div class="col-md-4"><a href="contscts.html" class="btn flat-btn color-btn">Get In Touch</a> </div>
+                            <div class="col-md-4"><a href="mailto:hello@kali.technology?Subject=My%20Personal%20Website" class="btn flat-btn color-btn">Get In Touch</a> </div>
                         </div>
                     </div>
                 </section>
@@ -463,9 +480,9 @@
                                     <!-- footer-contacts-->
                                     <div class="footer-contacts fl-wrap">
                                         <ul>
-                                            <li><i class="fal fa-phone"></i><span>Phone :</span><a href="#">+12132778118</a></li>
+                                            <!-- <li><i class="fal fa-phone"></i><span>Phone :</span><a href="#">+12132778118</a></li> -->
                                             <li><i class="fal fa-envelope"></i><span>Email :</span><a href="#">hello@kali.technology</a></li>
-                                            <li><i class="fal fa-map-marker"></i><span>Address</span><a href="#">Los Angeles, CA</a></li>
+                                            <!-- <li><i class="fal fa-map-marker"></i><span>Address</span><a href="#">Los Angeles, CA</a></li> -->
                                         </ul>
                                     </div>
                                     <!-- footer end -->
@@ -501,18 +518,21 @@
             </footer>
             <!-- footer end-->
             <!-- contact-btn -->
-            <a class="contact-btn color-bg" href="contacts.html"><i class="fal fa-envelope"></i><span>Get in Touch</span></a>
+
+            <a class="contact-btn color-bg " href="mailto:hello@kali.technology?Subject=Hello%20again" target="_top"><i class="fal fa-envelope "></i></a>
+
+            <!-- <a class="contact-btn color-bg" href="contacts.html"><i class="fal fa-envelope"></i><span>Get in Touch</span></a> -->
             <!-- contact-btn end -->
         </div>
         <!--   content end -->
         <!-- share-wrapper -->
-        <div class="share-wrapper isShare">
+        <!-- <div class="share-wrapper isShare">
             <div class="share-title"><span>Share</span></div>
             <div class="close-share soa"><span>Close</span><i class="fal fa-times"></i></div>
             <div class="share-inner soa">
                 <div class="share-container"></div>
             </div>
-        </div>
+        </div> -->
         <!-- share-wrapper end -->
     </div>
     <!-- Main end -->
