--- a/pricing.html
+++ b/pricing.html
@@ -16,6 +16,20 @@
     <link type="text/css" rel="stylesheet" href="css/color.css">
     <!--=============== favicons ===============-->
     <link rel="shortcut icon" href="images/favicon.ico">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124432890-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-124432890-1');
+    </script>
+
 </head>
 
 <body>
@@ -43,8 +57,8 @@
                 <ul>
                     <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fab fa-vk"></i></a></li>
+                    <!-- <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fab fa-vk"></i></a></li> -->
                 </ul>
             </div>
             <!--  showshare -->
@@ -71,7 +85,7 @@
                         </li>
                         <!-- <li><a href="ourteam.html">Our Team</a></li> -->
                         <li><a href="templates.html">Templates</a></li>
-                        <li><a href="contacts.html">Contact Us</a></li>
+                        <li><a href="mailto:hello@kali.technology?Subject=My%20Personal%20Website">Contact Us</a></li>
 
                     </ul>
                 </nav>
@@ -134,7 +148,7 @@
                                         <p> Our developers bring the best to you and your users. Count on us to produce smart, stable, intuitive websites that leverage ideal technologies. Please look take a look at our templates.
                                         </p>
                                         <div class="clearfix"></div>
-                                        <div class="serv-price">List Price</div>
+                                        <div class="serv-price">Prices as listed</div>
                                         <span class="serv-number">02.</span>
                                         <div class="serv-icon"><i class="fal fa-desktop"></i></div>
                                     </div>
@@ -150,8 +164,7 @@
                                             <li><a href="#">LinkedIn</a></li>
                                             <li><a href="#">Pinterest</a></li>
                                         </ul>
-                                        <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor. A ut odio libero, at vulputate urna. Nulla tristique mi a massa convallis cursus. Nulla eu mi
-                                            magna. Etiam suscipit commodo gravida.</p>
+                                        <p>We will discuss which social media platforms are best suited to realize your goals. We will then set up your marketing account manager and show you best practices. We want you to be successful!</p>
                                         <div class="clearfix"></div>
                                         <div class="serv-price">$99</div>
                                         <span class="serv-number">03.</span>
@@ -169,7 +182,7 @@
                                             <li><a href="#">Mktg Campaign Creation</a></li>
                                             <li><a href="#">Ad Creation</a></li>
                                         </ul>
-                                        <p>We are determined that our clients succeed with their new product and knowledge. We can discuss your plans and what the industry leaders are doing. Let our experts help guide your digital strategy to fruition. </p>
+                                        <p>We are determined that our clients succeed with their new product and knowledge. We can discuss your plans and what the industry leaders are doing. Let our experts help guide your digital strategy to success. </p>
                                         <div class="clearfix"></div>
                                         <div class="serv-price">150$-300$</div>
                                         <span class="serv-number">04.</span>
@@ -189,9 +202,9 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-8">
-                                <h3>Ready To order Your Wesite?</h3>
+                                <h3>Ready To order Your Website?</h3>
                             </div>
-                            <div class="col-md-4"><a href="contacts.html" class="btn flat-btn color-btn">Get In Touch</a> </div>
+                            <div class="col-md-4"><a href="mailto:hello@kali.technology?Subject=My%20Personal%20Website" class="btn flat-btn color-btn">Get In Touch</a> </div>
                         </div>
                     </div>
                 </section>
@@ -233,9 +246,9 @@
                                     <!-- footer-contacts-->
                                     <div class="footer-contacts fl-wrap">
                                         <ul>
-                                            <li><i class="fal fa-phone"></i><span>Phone :</span><a href="#">+12132778118</a></li>
-                                            <li><i class="fal fa-envelope"></i><span>Email :</span><a href="#">hello@kali.technology</a></li>
-                                            <li><i class="fal fa-map-marker"></i><span>Address</span><a href="#">Los Angeles, CA, USA</a></li>
+                                            <!-- <li><i class="fal fa-phone"></i><span>Phone :</span><a href="#">+12132778118</a></li> -->
+                                            <li><i class="fal fa-envelope"></i><span>Email :</span><a href="mailto:hello@kali.technology?Subject=My%20Personal%20Website">hello@kali.technology</a></li>
+                                            <!-- <li><i class="fal fa-map-marker"></i><span>Address</span><a href="#">Los Angeles, CA</a></li> -->
                                         </ul>
                                     </div>
                                     <!-- footer end -->
@@ -271,7 +284,10 @@
             </footer>
             <!-- footer end-->
             <!-- contact-btn -->
-            <a class="contact-btn color-bg" href="contacts.html"><i class="fal fa-envelope"></i><span>Get in Touch</span></a>
+
+            <a class="contact-btn color-bg " href="mailto:hello@kali.technology?Subject=Hello%20again" target="_top"><i class="fal fa-envelope "></i></a>
+
+            <!-- <a class="contact-btn color-bg" href="contacts.html"><i class="fal fa-envelope"></i><span>Get in Touch</span></a> -->
             <!-- contact-btn end -->
         </div>
         <!--   content end -->
