--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <!--[if lt IE 7]>      <html lang="en" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" class="no-js lt-ie9"> <![endif]-->
@@ -14,9 +14,9 @@
     <meta name="keywords" content="">
     <meta name="author" content="urosd">
     <!-- ======= titles ======= -->
-    <title>Liftfund | Nonprofit Template</title>
+    <title>SEEK</title>
     <!-- ======= favicon ======= -->
-    <link rel="icon" type="image/png" href="favicon.png">
+    <!-- <link rel="icon" type="image/png" href="favicon.png"> -->
     <!-- ======= all css ======= -->
     <!-- normalize css -->
     <link rel="stylesheet" href="css/normalize.css">
