--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <!-- single banner -->
         <div class="single-banner">
             <div class="itembg">
-                <img src="img/banner/01.jpg" alt="">
+                <img src="img/banner/seed1.jpg" alt="">
             </div>
             <div class="container">
                 <div class="row">
@@ -151,7 +151,7 @@
         <!-- single banner -->
         <div class="single-banner">
             <div class="itembg">
-                <img src="img/banner/02.jpg" alt="">
+                <img src="img/banner/hf1.PNG" alt="">
             </div>
             <div class="container">
                 <div class="row">
@@ -396,12 +396,12 @@
         causes part start
         ============================
     -->
-    <section class="causes-area section-padding" id="causes">
+    <!-- <section class="causes-area section-padding" id="causes">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">
-                    <!-- section title -->
-                    <div class="title text-center">
+                <div class="col-sm-8 col-sm-offset-2"> -->
+    <!-- section title -->
+    <!-- <div class="title text-center">
                         <h2>our causes</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi tempora veritatis nemo aut ea iusto eos est expedita, quas ab adipisci consectetur tempora jet.</p>
@@ -409,23 +409,23 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <!-- single causes -->
-                    <div class="causes-info">
+                <div class="col-md-4 col-sm-6"> -->
+    <!-- single causes -->
+    <!-- <div class="causes-info">
                         <div class="causes-img">
                             <img src="img/causes/01.jpg" alt="">
-                        </div>
-                        <!-- single causes info -->
-                        <div class="causes-details">
+                        </div> -->
+    <!-- single causes info -->
+    <!-- <div class="causes-details">
                             <h2><a href="#">Education For Child</a></h2>
                             <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
                             <div class="donate-progress-bar">
                                 <div id="bar2" class="barfiller bar-two">
                                     <div class="tipWrap">
                                         <span class="tip"></span>
-                                    </div>
-                                    <!-- progress bar -->
-                                    <span class="fill" data-percentage="76"></span>
+                                    </div> -->
+    <!-- progress bar -->
+    <!-- <span class="fill" data-percentage="76"></span>
                                 </div>
                             </div>
                             <div class="right">
@@ -438,23 +438,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6">
-                    <!-- single causes -->
-                    <div class="causes-info">
+                <div class="col-md-4 col-sm-6"> -->
+    <!-- single causes -->
+    <!-- <div class="causes-info">
                         <div class="causes-img">
                             <img src="img/causes/02.jpg" alt="">
-                        </div>
-                        <!-- single causes info -->
-                        <div class="causes-details">
+                        </div> -->
+    <!-- single causes info -->
+    <!-- <div class="causes-details">
                             <h2><a href="#">Clean Water For Child</a></h2>
                             <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
                             <div class="donate-progress-bar">
                                 <div id="bar3" class="barfiller bar-three">
                                     <div class="tipWrap">
                                         <span class="tip"></span>
-                                    </div>
-                                    <!-- progress bar -->
-                                    <span class="fill" data-percentage="95"></span>
+                                    </div> -->
+    <!-- progress bar -->
+    <!-- <span class="fill" data-percentage="95"></span>
                                 </div>
                             </div>
                             <div class="right">
@@ -467,23 +467,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6">
-                    <!-- single causes -->
-                    <div class="causes-info">
+                <div class="col-md-4 col-sm-6"> -->
+    <!-- single causes -->
+    <!-- <div class="causes-info">
                         <div class="causes-img">
                             <img src="img/causes/03.jpg" alt="">
-                        </div>
-                        <!-- single causes info -->
-                        <div class="causes-details">
+                        </div> -->
+    <!-- single causes info -->
+    <!-- <div class="causes-details">
                             <h2><a href="#">Feed For Child</a></h2>
                             <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
                             <div class="donate-progress-bar">
                                 <div id="bar4" class="barfiller bar-four">
                                     <div class="tipWrap">
                                         <span class="tip"></span>
-                                    </div>
-                                    <!-- progress bar -->
-                                    <span class="fill" data-percentage="87"></span>
+                                    </div> -->
+    <!-- progress bar -->
+    <!-- <span class="fill" data-percentage="87"></span>
                                 </div>
                             </div>
                             <div class="right">
@@ -496,23 +496,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6">
-                    <!-- single causes -->
-                    <div class="causes-info">
+                <div class="col-md-4 col-sm-6"> -->
+    <!-- single causes -->
+    <!-- <div class="causes-info">
                         <div class="causes-img">
                             <img src="img/causes/01.jpg" alt="">
-                        </div>
-                        <!-- single causes info -->
-                        <div class="causes-details">
+                        </div> -->
+    <!-- single causes info -->
+    <!-- <div class="causes-details">
                             <h2><a href="#">Education For Child</a></h2>
                             <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
                             <div class="donate-progress-bar">
                                 <div id="bar5" class="barfiller bar-five">
                                     <div class="tipWrap">
                                         <span class="tip"></span>
-                                    </div>
-                                    <!-- progress bar -->
-                                    <span class="fill" data-percentage="82"></span>
+                                    </div> -->
+    <!-- progress bar -->
+    <!-- <span class="fill" data-percentage="82"></span>
                                 </div>
                             </div>
                             <div class="right">
@@ -525,23 +525,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6">
-                    <!-- single causes -->
-                    <div class="causes-info">
+                <div class="col-md-4 col-sm-6"> -->
+    <!-- single causes -->
+    <!-- <div class="causes-info">
                         <div class="causes-img">
                             <img src="img/causes/02.jpg" alt="">
-                        </div>
-                        <!-- single causes info -->
-                        <div class="causes-details">
+                        </div> -->
+    <!-- single causes info -->
+    <!-- <div class="causes-details">
                             <h2><a href="#">Clean Water For Child</a></h2>
                             <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
                             <div class="donate-progress-bar">
                                 <div id="bar6" class="barfiller bar-six">
                                     <div class="tipWrap">
                                         <span class="tip"></span>
-                                    </div>
-                                    <!-- progress bar -->
-                                    <span class="fill" data-percentage="77"></span>
+                                    </div> -->
+    <!-- progress bar -->
+    <!-- <span class="fill" data-percentage="77"></span>
                                 </div>
                             </div>
                             <div class="right">
@@ -554,23 +554,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6">
-                    <!-- single causes -->
-                    <div class="causes-info">
+                <div class="col-md-4 col-sm-6"> -->
+    <!-- single causes -->
+    <!-- <div class="causes-info">
                         <div class="causes-img">
                             <img src="img/causes/03.jpg" alt="">
-                        </div>
-                        <!-- single causes info -->
-                        <div class="causes-details">
+                        </div> -->
+    <!-- single causes info -->
+    <!-- <div class="causes-details">
                             <h2><a href="#">Feed For Child</a></h2>
                             <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum.</p>
                             <div class="donate-progress-bar">
                                 <div id="bar7" class="barfiller bar-seven">
                                     <div class="tipWrap">
                                         <span class="tip"></span>
-                                    </div>
-                                    <!-- progress bar -->
-                                    <span class="fill" data-percentage="93"></span>
+                                    </div> -->
+    <!-- progress bar -->
+    <!-- <span class="fill" data-percentage="93"></span>
                                 </div>
                             </div>
                             <div class="right">
@@ -585,7 +585,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--
         ============================
         causes part end
