--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <!-- single banner -->
         <div class="single-banner">
             <div class="itembg">
-                <img src="img/banner/seed1.jpg" alt="">
+                <img src="img/banner/seed1.JPG" alt="">
             </div>
             <div class="container">
                 <div class="row">
@@ -151,7 +151,7 @@
         <!-- single banner -->
         <div class="single-banner">
             <div class="itembg">
-                <img src="img/banner/hf1.PNG" alt="">
+                <img src="img/banner/hl.JPG" alt="">
             </div>
             <div class="container">
                 <div class="row">
@@ -170,15 +170,15 @@
             </div>
         </div>
         <!-- single banner -->
-        <div class="single-banner">
+        <!-- <div class="single-banner">
             <div class="itembg">
                 <img src="img/banner/03.jpg" alt="">
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 col-md-offset-1 col-lg-offset-0 col-sm-8">
-                        <!-- single banner info -->
-                        <div class="single-banner-con">
+                    <div class="col-lg-6 col-md-6 col-md-offset-1 col-lg-offset-0 col-sm-8"> -->
+        <!-- single banner info -->
+        <!-- <div class="single-banner-con">
                             <div class="single-banner-txt">
                                 <h1><span>save the children</span> save the world</h1>
                                 <p>We provides always our best services for our clients and always try to achieve our client's trust and satisfaction.</p>
@@ -189,7 +189,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
     <!--
         ============================
