--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <!-- single banner -->
         <div class="single-banner">
             <div class="itembg">
-                <img src="img/banner/hl.JPG" alt="">
+                <img src="img/banner/home.JPG" alt="">
             </div>
             <div class="container">
                 <div class="row">
@@ -170,18 +170,18 @@
             </div>
         </div>
         <!-- single banner -->
-        <!-- <div class="single-banner">
+        <div class="single-banner">
             <div class="itembg">
-                <img src="img/banner/03.jpg" alt="">
+                <img src="img/banner/seekath.PNG" alt="">
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 col-md-offset-1 col-lg-offset-0 col-sm-8"> -->
-        <!-- single banner info -->
-        <!-- <div class="single-banner-con">
+                    <div class="col-lg-6 col-md-6 col-md-offset-1 col-lg-offset-0 col-sm-8">
+                        <!-- single banner info -->
+                        <div class="single-banner-con">
                             <div class="single-banner-txt">
-                                <h1><span>save the children</span> save the world</h1>
-                                <p>We provides always our best services for our clients and always try to achieve our client's trust and satisfaction.</p>
+                                <h1><span>Kids Get Hip</span>and Fit Fair</h1>
+                                <p>Helping to tackle obesity in urban areas by teaching students healthy lifestyles.</p>
                                 <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
                                 <a href="#" class="tem-btn move-eff"><span>contact us</span></a>
                             </div>
@@ -189,7 +189,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
     </section>
     <!--
         ============================
@@ -205,12 +205,12 @@
     <section class="donate-wraper">
         <!-- single donate wraper -->
         <div class="single-donate-wraper donate-wraper-bg-one">
-            <h2> You may feel like a drop in the bucket. But every drop counts!</h2>
-            <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
+            <h2> STEMtastic Saturday <br>Teaching kids physics!<br>September 29. </h2>
+            <a href="#donation" class="tem-btn nav-link move-eff"><span>volunteer now</span></a>
         </div>
         <!-- single donate wraper -->
         <div class="single-donate-wraper donate-wraper-bg-two">
-            <h2>Doing nothing for others is the undoing of ourselves.</h2>
+            <h2>Feeding the community with H.O.M.E.S, Inc. Friday, 10/12/2018.</h2>
             <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
         </div>
         <!-- single donate wraper -->
