--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                         <!-- single banner info -->
                         <div class="single-banner-con">
                             <div class="single-banner-txt">
-                                <h1><span>donate for</span> the poor children</h1>
-                                <p class="fadeIn animated animated-08s">We provides always our best services for our clients and always try to achieve our client's trust and satisfaction.</p>
+                                <h1><span>Providing</span> Education through S.T.E.M.</h1>
+                                <p class="fadeIn animated animated-08s">Science, Technology, Engineering, & Mathematic Programs.</p>
                                 <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
                                 <a href="#" class="tem-btn move-eff"><span>join volunteer</span></a>
                             </div>
@@ -246,7 +246,7 @@
                 <div class="col-sm-5">
                     <!-- about img -->
                     <div class="about-img">
-                        <img src="img/about/about.jpg" alt="">
+                        <img src="img/about/dwayne.JPG" alt="">
                     </div>
                 </div>
                 <div class="col-sm-7">
