--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <!-- single banner info -->
                         <div class="single-banner-con">
                             <div class="single-banner-txt">
-                                <h1><span>Providing</span> Education through S.T.E.M.</h1>
+                                <h1><span>Rigorous</span> Education through S.T.E.M.</h1>
                                 <p class="fadeIn animated animated-08s">Science, Technology, Engineering, & Mathematic Programs.</p>
                                 <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
                                 <a href="#" class="tem-btn move-eff"><span>join volunteer</span></a>
@@ -159,7 +159,7 @@
                         <!-- single banner info -->
                         <div class="single-banner-con">
                             <div class="single-banner-txt">
-                                <h1><span>raise</span> your helping hand for the <span>helpless people</span></h1>
+                                <h1><span>Feeding</span> the homeless and <span>hungry.</span></h1>
                                 <p>We provides always our best services for our clients and always try to achieve our client's trust and satisfaction.</p>
                                 <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
                                 <a href="#" class="tem-btn move-eff wmBox" data-popup="https://www.youtube.com/embed/7e90gBu4pas?autoplay=1"><span>play video</span></a>
@@ -180,7 +180,7 @@
                         <!-- single banner info -->
                         <div class="single-banner-con">
                             <div class="single-banner-txt">
-                                <h1><span>Kids Get Hip</span>and Fit Fair</h1>
+                                <h1><span>Kids Get Hip</span> and Fit Fair</h1>
                                 <p>Helping to tackle obesity in urban areas by teaching students healthy lifestyles.</p>
                                 <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
                                 <a href="#" class="tem-btn move-eff"><span>contact us</span></a>
