--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <div class="single-banner-con">
                             <div class="single-banner-txt">
                                 <h1><span>Feeding</span> the homeless and <span>hungry.</span></h1>
-                                <p>We provides always our best services for our clients and always try to achieve our client's trust and satisfaction.</p>
+                                <p>No one should encounter going a day without food.</p>
                                 <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
                                 <a href="#" class="tem-btn move-eff wmBox" data-popup="https://www.youtube.com/embed/7e90gBu4pas?autoplay=1"><span>play video</span></a>
                             </div>
@@ -215,7 +215,7 @@
         </div>
         <!-- single donate wraper -->
         <div class="single-donate-wraper donate-wraper-bg-three">
-            <h2>Forget what you can get and see what you can give.</h2>
+            <h2> STEMtastic Saturday <br>Teaching kids physics!<br>October 13. </h2>
             <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
         </div>
     </section>
