--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
                     <div class="title text-center">
                         <h2>who we are</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi tempora veritatis nemo aut ea iusto eos est expedita, quas ab adipisci consectetur tempora jet.</p>
+                        <p>We are a mobile non-profit, 501c3 organization who provide services in various communities. Exposing real life situations to our youth, encourages them to lead, assist, and conquer what it means to become a lifelong, productive,
+                            problem solver within any setting. Providing children with opportunities to interact with diverse individuals who are less fortunate, will allow them to become more compassionate about the lives of other people. Not only do
+                            we believe in the philanthropy of giving back, we also react to needs as they arise, whether it is in our own community or in communities that cross our path.</p>
                     </div>
                 </div>
             </div>
@@ -252,10 +254,10 @@
                 <div class="col-sm-7">
                     <!-- about details -->
                     <div class="about-details">
-                        <h2>Our History</h2>
-                        <p>We care for children, protect their welfare, and prepare them for the future. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus
-                            a sit amet mauris. Morbi accumsan ipsum velit. </p>
-                        <p>We care for children, protect their welfare, and prepare them for the future. Aenean sollicitudin, lorem quis bibendum auctor.</p>
+                        <h2>Vision Statement</h2>
+                        <p>Our goal is to improve the value of life for children of diverse backgrounds by providing public services that promote self-advocacy skills, strategic thinking skills, and community involvement to become lifelong problem solvers.
+                        </p>
+                        <p></p>
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="about-achievement">
@@ -279,10 +281,9 @@
                 <div class="col-sm-7 em">
                     <!-- about details -->
                     <div class="about-details">
-                        <h2>Our Foundation</h2>
-                        <p>We care for children, protect their welfare, and prepare them for the future. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus
-                            a sit amet mauris. Morbi accumsan ipsum velit. </p>
-                        <p>We care for children, protect their welfare, and prepare them for the future. Aenean sollicitudin, lorem quis bibendum auctor.</p>
+                        <h2>Mission Statement</h2>
+                        <p>The mission of S.E.E.K is to empower teenagers, parents, teachers, and the community to help protect lives and discover educational diverse programs that promote lifelong problem solvers beyond the classroom. </p>
+                        <p></p>
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="about-achievement">
@@ -304,7 +305,7 @@
                 <div class="col-sm-5 em">
                     <!-- about img -->
                     <div class="about-img">
-                        <img src="img/about/found.jpg" alt="">
+                        <img src="img/about/vision.JPG" alt="">
                     </div>
                 </div>
             </div>
@@ -362,22 +363,22 @@
                 <div class="col-md-12">
                     <!-- donate count info -->
                     <div class="donate-count">
-                        <img src="img/about/donate-box.jpg" alt="">
+                        <img src="img/about/gun.jpg" alt="">
                         <div class="donate-progress-box">
-                            <h2>Stop Rohingya Killing</h2>
-                            <p>We care for children, protect their welfare, and prepare them for the future. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                            <h2>Stop Gun Violence</h2>
+                            <p>In 2019, we are launching our “Stop the Violence” Campaign to influence the young men to choose between believing in themselves, academics versus being peer pressure into gangsterism. </p>
                             <div class="donate-progress-bar">
                                 <div id="bar1" class="barfiller bar-one">
                                     <div class="tipWrap">
                                         <span class="tip"></span>
                                     </div>
                                     <!-- progress count bar -->
-                                    <span class="fill" data-percentage="85"></span>
+                                    <span class="fill" data-percentage="11"></span>
                                 </div>
                             </div>
                             <div class="progress-info">
                                 <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
-                                <h3>85% Donated / $45,0000 To Go</h3>
+                                <h3>$11,000 Donated / $89,0000 To Go</h3>
                             </div>
                         </div>
                     </div>
@@ -992,7 +993,7 @@
                         </div>
                         <div class="events-content">
                             <a href="#">
-                                <h2>event tittle here</h2>
+                                <h2>event title here</h2>
                             </a>
                             <div class="events-post-meta">
                                 <ul>
@@ -1078,7 +1079,7 @@
                 <div class="col-sm-8 col-sm-offset-2">
                     <!-- section title -->
                     <div class="title text-center">
-                        <h2>what people says</h2>
+                        <h2>what people say</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi tempora veritatis nemo aut ea iusto eos est expedita, quas ab adipisci consectetur tempora jet.</p>
                     </div>
@@ -1481,7 +1482,7 @@
                     <i class="fa fa-envelope"></i>
                     <div class="media-body">
                         <h5>E-mail:</h5>
-                        support@gymoga.com
+                        asakariyawo@seekedu.org
                     </div>
                 </div>
             </div>
@@ -1491,7 +1492,7 @@
                     <i class="fa fa-phone"></i>
                     <div class="media-body">
                         <h5>Phone:</h5>
-                        +1 000 111 222
+                        +305-639-0142
                     </div>
                 </div>
             </div>
@@ -1501,7 +1502,7 @@
                     <i class="fa fa-map-marker"></i>
                     <div class="media-body">
                         <h5>Address:</h5>
-                        121 Kafrul Street, Melbrone, Australia-3200
+                        21421 N.W. 13th Court, Miami Gardens, FL 33169
                     </div>
                 </div>
             </div>
@@ -1526,11 +1527,11 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-widgets">
                             <h2>Head Office</h2>
-                            <p>Lorem ipsum dolor sit amet, sed do eiusmod temporia.</p>
+                            <p>CEO-Anike Sakariyawo</p>
                             <ul class="address-info">
-                                <li><i class="fa fa-phone" aria-hidden="true"></i> <a href="#">+256-4516-556</a></li>
-                                <li><i class="fa fa-envelope" aria-hidden="true"></i> <a href="#">support@cleaning.com</a></li>
-                                <li><i class="fa fa-map-marker" aria-hidden="true"></i> 100 Main St, Blacktown NSW 2148, Australia</li>
+                                <li><i class="fa fa-phone" aria-hidden="true"></i> <a href="#">+305-639-0142</a></li>
+                                <li><i class="fa fa-envelope" aria-hidden="true"></i> <a href="#">asakariyawo@seekedu.org</a></li>
+                                <li><i class="fa fa-map-marker" aria-hidden="true"></i> 21421 N.W. 13th Court, Miami Gardens, FL 33169</li>
                             </ul>
                             <!-- footer social link -->
                             <div class="footer-social-link">
@@ -1566,7 +1567,7 @@
                                     <input placeholder="E-mail" type="text">
                                     <button type="submit">Subscribe</button>
                                 </form>
-                                <p>Sign up for new <a href="#">Happiness</a> Construction company content, updates, surveys &amp; offers.</p>
+                                <p>Sign up for new <a href="#">S.E.E.K.</a> Non-Profit content, updates, surveys &amp; offers.</p>
                             </div>
                         </div>
                     </div>
